--- a/index.html
+++ b/index.html
@@ -3,96 +3,92 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Forecast</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Hoger Lager</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="img/dice logo.jpg" type="image/x-icon">
 </head>
 
 <body>
-    <header>
-        <h1>Weather forecast</h1>
 
-        <input type="text" name="city" class="searched" placeholder="search your city">
-        <button class="search">search</button>
-    </header>
-    <main>
-        <div class="temp-now">
-            <h1 class="city-name">City</h1>
-            <h3 class="rain-perc">Chance of rain <span class="Rain-possibility">0</span>%</h3>
-            <h2 class="temp">Temperature <span>0</span>°C</h2>
-        </div>
-        <div class="day-weather">
-            <div class="time time-1">
-                <h3>Time</h3>
-                <h4>Temperature <span class="hour-temp">0</span>°C</h4>
+    <div class="container">
+        <header class="text-center">
+            <h1>Hoger Lager</h1>
+        </header>
+        <main>
+            <div class="headings">
+                <div>&nbsp;</div>
+                <div class="text-center">
+                    <h3>Computer</h3>
+                </div>
+                <div>&nbsp;</div>
+                <div class="text-center">
+                    <h3>Speler</h3>
+                </div>
+                <div>&nbsp;</div>
             </div>
-            <div class="time time-2">
-                <h3>Time</h3>
-                <h4>Temperature <span class="hour-temp">0</span>°C</h4>
+            <div class="credits">
+                <div>&nbsp;</div>
+                <div class="text-center">
+                    <h4>Credits: <span class="computer-credits">0</span></h4>
+                </div>
+                <div>&nbsp;</div>
+                <div class="text-center">
+                    <h4>Credits: <span class="player-credits">0</span></h4>
+                </div>
+                <div>&nbsp;</div>
             </div>
-            <div class="time time-3">
-                <h3>Time</h3>
-                <h4>Temperature <span class="hour-temp">0</span>°C</h4>
+            <div class="dices">
+                <div>&nbsp;</div>
+                <div class="dices-computer-player">
+                    <div class="dice text-center computer-dice-one"><img class="img2" src="/img/dice6.png"></div>
+                </div>
+                <div>&nbsp;</div>
+                <div class="dices-player">
+                    <div class="dice text-center player-dice-one"><img class="img1" src="/img/dice6.png"></div>
+                </div>
+                <div>&nbsp;</div>
             </div>
-            <div class="time time-4">
-                <h3>Time</h3>
-                <h4>Temperature <span class="hour-temp">0</span>°C</h4>
+            <div class="message text-center">
+                <!-- <div>&nbsp;</div> -->
+                <div class="message-box">
+                    <p>Druk op Gooi dobbelsteen om het spel te starten.</p>
+                </div>
+                <!-- <div>&nbsp;</div> -->
             </div>
-            <div class="time time-5">
-                <h3>Time</h3>
-                <h4>Temperature <span class="hour-temp">0</span>°C</h4>
-            </div>
-        </div>
-        <div class="details">
-            <div>
-                <h4>Precipitation</h4>
-                <h3>Amount <span class="prec-data">0</span></h3>
-            </div>
-            <div>
-                <h4>Wind</h4>
-                <h3>Speed <span class="wind-data">0</span>km/h</h3>
-            </div>
-            <div>
-                <h4>Pollen</h4>
-                <h3>Amount <span class="poll-data">0</span></h3>
-            </div>
-            <div>
-                <h4>UV index</h4>
-                <h3>Amount <span class="uv-data">0</span></h3>
-            </div>
-            <div>
-                <h4>Visibility</h4>
-                <h3>Distance <span class="vis-data">0</span>m</h3>
-            </div>
-            <div>
-                <h4>Humidity</h4>
-                <h3>Percentage <span class="prec-data">0</span>%</h3>
-            </div>
-        </div>
-        <div class="week-weather">
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-            <div class="day"></div>
-        </div>
-        <div class="sun">
-            <div class="sun-details">
-                <h2>Sunshine</h2>
-                <h4>Time <span class="sunshine-time">0</span></h4>
-            </div>
-            <div class="sun-details">
-                <h2>Sunset</h2>
-                <h4>Time <span class="sunset-time">0</span></h4>
-            </div>
-        </div>
-    </main>
-    <footer></footer>
+            <div class="controls">
+                <div>&nbsp;</div>
+                <div class="text-center player-dice-button-container">
+                    <button class="dice-button">
+                        Gooi dobbelsteen
+                    </button>
+                </div>
+                <div class="text-center higher-button-container">
+                    <button class="higher-button">
+                        Hoger
+                    </button>
+                </div>
+                <div class="text-center lower-button-container">
+                    <button class="lower-button">
+                        Lager
+                    </button>
+                </div>
+                <div>
+                    <button class="help-button">
+                        Help
+                    </button>
+                </div>
 
-
-
-    <script src="main.js"></script>
+            </div>
+            <div class="ronden">&nbsp;
+                <h4>Ronden gewonnen;</h4>
+                <p>Speler: <span class="player-rounds">0</span></p>
+                <p>Computer: <span class="computer-rounds">0</span></p>
+            </div>
+        </main>
+    </div>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
