--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="dices">
                 <div>&nbsp;</div>
                 <div class="dices-computer-player">
-                    <div class="dice text-center computer-dice-one"><img class="img2" src="/img/dice6.png"></div>
+                    <div class="dice text-center computer-dice-one"><img class="img2" src="img/dice6.png"></div>
                 </div>
                 <div>&nbsp;</div>
                 <div class="dices-player">
-                    <div class="dice text-center player-dice-one"><img class="img1" src="/img/dice6.png"></div>
+                    <div class="dice text-center player-dice-one"><img class="img1" src="img/dice6.png"></div>
                 </div>
                 <div>&nbsp;</div>
             </div>
@@ -88,7 +88,7 @@
             </div>
         </main>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
